--- a/Italian/main/ContactsProvider.apk/res/values-it/strings.xml
+++ b/Italian/main/ContactsProvider.apk/res/values-it/strings.xml
@@ -19,9 +19,10 @@
     <string name="debug_dump_email_sender_picker">Scegli un programma per inviare il file</string>
     <string name="debug_dump_email_subject">Database di contatti allegato</string>
     <string name="debug_dump_email_body">In allegato è presente il mio database di contatti contenente tutte le informazioni sui miei contatti. Trattare con cura.</string>
-    <string name="group_name_contacts">Contatti</string>
-    <string name="group_name_friends">Amici</string>
-    <string name="group_name_family">Famiglia</string>
-    <string name="group_name_coworkers">Colleghi</string>
-    <string name="unknown">Numero sconosciuto</string>
+    <string name="pound_search_tip">Inserisci un numero dopo # per cercare nei contatti</string>
+    <string name="create_contact">Nuovo contatto</string>
+    <string name="send_sms">Invia messaggio</string>
+    <string name="edit_contact">Aggiungi a contatto</string>
+    <string name="call_log_provider_label">Registro chiamate</string>
+    <string name="third_party_delete_contact_info">"\"%s\" sta cercando di eliminare i tuoi contatti. Questa azione non può essere eseguita da applicazioni di terze parti. Per eliminare i contatti utilizza l'applicazione Contatti integrata in MIUI."</string>
 </resources>
