--- a/Italian/main/ThemeManager.apk/res/values-it/strings.xml
+++ b/Italian/main/ThemeManager.apk/res/values-it/strings.xml
@@ -1,100 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Temi</string>
-    <string name="theme_import_activity_label">Aggiornamento tema</string>
-    <string name="theme_changing_dialog_title">Installazione nuovo tema, attendere prego..</string>
-    <string name="theme_changed_message">Applicato con successo!</string>
-    <string name="theme_changed_failed_message">Cambio tema non riuscito!</string>
-    <string name="backup_preference_title">Impostazioni Backup</string>
-    <string name="backup_theme_dialog_ok">Backup</string>
-    <string name="backup_theme_dialog_message">Backup tema corrente in %1$s</string>
-    <string name="backup_theme_progress_message">Backup in corso, attendere prego...</string>
-    <string name="backup_theme_success_message">Backup tema eseguito correttamente</string>
-    <string name="backup_theme_name">Mio backup</string>
-    <string name="theme_description_title_default">Predefinito</string>
-    <string name="theme_description_title_customized">Modificato</string>
-    <string name="component_category_finest_title">In evidenza</string>
-    <string name="component_category_more_title">Altro</string>
-    <string name="theme_component_title_framework">Temi</string>
-    <string name="theme_component_title_mms">SMS</string>
-    <string name="theme_component_title_wallpaper">Sfondi Desktop</string>
-    <string name="theme_component_title_lockwallpaper">Sfondi Lockscreen</string>
-    <string name="theme_component_title_miwallpaper">Sfondo MI</string>
-    <string name="theme_component_title_icon">Icone</string>
-    <string name="theme_component_title_boot_animation">Animazioni Boot</string>
-    <string name="theme_component_title_boot_audio">Audio Boot</string>
-    <string name="theme_component_title_font">Caratteri</string>
-    <string name="theme_component_title_ringtone">Suonerie</string>
-    <string name="theme_component_title_notification">Notifiche</string>
-    <string name="theme_component_title_alarm">Suonerie Sveglia</string>
-    <string name="theme_component_title_contact">Tastiere Telefono</string>
-    <string name="theme_component_title_lockstyle">Lockscreen</string>
-    <string name="theme_component_title_statusbar">Barre di stato</string>
-    <string name="theme_component_title_launcher">Pagine home</string>
-    <string name="theme_component_title_audio_effect">Effetti Audio</string>
-    <string name="theme_component_title_alarmstyle">Stili sveglia</string>
-    <string name="theme_component_title_clock">Orologi</string>
-    <string name="theme_component_title_photo_frame">Cornici</string>
-    <string name="theme_component_title_others">Altro</string>
-    <string name="theme_component_title_all">Temi</string>
-    <string name="apply_theme_no_select_message">Scegli i componenti</string>
-    <string name="apply_lockscreen_paper_tips">Questa lockscreen non supporta sfondi diversi.</string>
-    <string name="theme_import_from_sdcard">Importa dalla scheda SD</string>
-    <string name="theme_select_others">Sfoglia</string>
-    <string name="third_party_pickers_activity_title">Imposta %1$s</string>
-    <string name="lockstyle_personal_settings">Personalizza</string>
-    <string name="wallpaper_settings">Impostazione sfondo</string>
-    <string name="desktop_wallpaper">Schermata home</string>
-    <string name="live_wallpaper">Sfondo animati</string>
-    <string name="mi_wallpaper">Sfondo MIUI</string>
-    <string name="lockscreen_wallpaper">Schermata di blocco</string>
-    <string name="change_wallpaper">Sfondo</string>
-    <string name="component_settings_title">Modifica tema</string>
-    <string name="component_select_title">%1$s componenti selezionati</string>
-    <string name="component_include_title">Contains %1$s componenti</string>
-    <string name="apply_font_tip">Il tema contiene font, quindi è necessario riavviare.</string>
-    <string name="apply_font_btn_reboot">Applica e riavvia</string>
-    <string name="apply_font_btn_exclude">Applica senza font</string>
-    <string name="title_local">Locali</string>
-    <string name="title_online">Online</string>
-    <string name="title_component">Misti</string>
-    <string name="title_system_resource">Risorse di sistema</string>
-    <string name="long_ringtone_resource">Durata (>5sec)</string>
-    <string name="short_ringtone_resource">Breve (&lt;5sec)</string>
-    <string name="all_ringtone_resource">Tutto</string>
-    <string name="resource_preview">Anteprima</string>
-    <string name="wallpaper_set_as_both">Imposta per entrambi</string>
-    <string name="wallpaper_set_as_destop">Imposta come sfondo</string>
-    <string name="wallpaper_set_as_lockscreen">Imposta come lockscreen</string>
-    <string name="wallpaper_crop">Taglia</string>
-    <string name="wallpaper_loading_text">Caricamento...</string>
-    <string name="wallpaper_decoded_error">Decodifica fallita</string>
-    <string name="close">Chiudi</string>
-    <string name="download_success">Scaricato correttamente</string>
-    <string name="basic_info">Informazioni base</string>
-    <string name="account_info">Il mio account</string>
-    <string name="payment_info">MiCredit</string>
-    <string name="theme_batch_has_update_text">%1$d temi hanno aggiornamenti disponibili</string>
-    <string name="theme_batch_updating_text">%1$d temi sono stati aggiornati</string>
-    <string name="theme_batch_update_all">Aggiorna tutto</string>
-    <string name="theme_batch_update_dlg_title">Aggiorna</string>
-    <string name="theme_batch_update_dlg_content">Vuoi aggiornare adesso?</string>
-    <string name="theme_batch_update_dlg_content_single">Aggiornare adesso?</string>
-    <string name="theme_current_using_has_update">Il tema attuale è stato aggiornato, premi qui per applicare</string>
-    <string name="theme_immediately_apply_tip">Il tema è stato aggiornato, applicare subito?</string>
-    <string name="theme_name">%1$s</string>
-    <string name="restore_default_theme_alert">"Utilizza l'applicazione temi per acquistare o riscaricare i file."</string>
-    <string name="selected_resource_file_invalid">Il file selezionato non è valido.</string>
-    <string name="apply_theme_with_ringtones">Applica temi con suonerie</string>
-    <string name="settings">Impostazioni</string>
-    <string name="maml_component_customization_title">Settings</string>
+    <string name="maml_component_customization_title">Inpostazioni</string>
     <string name="default_name">Predefinito</string>
     <string name="resource_select">Seleziona</string>
     <string name="resource_app_name">Ricerca Browser</string>
+    <string name="resource_delete">Elimina</string>
     <string name="resource_price_free">Gratis</string>
     <string name="resource_price_unit"> MiCredit</string>
     <string name="resource_price_format">(%1$s)</string>
-    <string name="sdcard_not_mounted_dialog_title">No SD card detected</string>
+    <string name="sdcard_not_mounted_dialog_title">Scheda SD non trovata</string>
     <string name="sdcard_not_mounted_dialog_message">"Inserisci una scheda SD ora.
 "</string>
     <string name="resource_mute">Nessuna</string>
@@ -127,6 +41,7 @@
     <string name="resource_downloading">Download in corso</string>
     <string name="resource_waiting_download">In attesa del download..</string>
     <string name="resource_import_successful">Download completato.</string>
+    <string name="resource_import_failed">Importazione fallita</string>
     <string name="resource_delta_update_successful">Aggiornamento patch completato，risparmiati %1$s.</string>
     <string name="resource_delta_update_failed">Aggiornamento patch fallito! Verrà scaricata la risorsa completa</string>
     <string name="resource_delta_update_total">%1$d aggiornamenti patch. Salvati in totale %2$s</string>
@@ -134,6 +49,7 @@
     <string name="resource_update">Aggiorna</string>
     <string name="resource_buy">Acquista</string>
     <string name="resource_importing">Importazione</string>
+    <string name="resource_ringtone_playing_error">playing error</string>
     <string name="online_no_network">Impossibile connettere alla rete</string>
     <string name="online_search_hint">Cerca risorse online</string>
     <string name="loading">Caricamento...</string>
@@ -160,8 +76,8 @@
     <string name="resource_downloaded_title">Risorse scaricate</string>
     <string name="resource_see_more">Vedi di più</string>
     <string name="resource_no_result">Nessun risultato</string>
-    <string name="resource_unable_to_access">"Attualmente
- disponibile per il tuo Paese."</string>
+    <string name="resource_failed_to_load_list">Impossibile caricare la lista</string>
+    <string name="resource_search_list_empty">Non è stato trovato nulla</string>
     <string name="resource_list_title">Ultime</string>
     <string name="resource_get_auth_checking">Ricerca autorizzazioni...</string>
     <string name="resource_get_auth_retrieving">Recupero autorizzazioni...</string>
@@ -173,6 +89,18 @@
     <string name="resource_purchase_getting_order">Recupero informazioni ordine…</string>
     <string name="resource_purchase_waiting_payment">In attesa delle informazioni di pagamento…</string>
     <string name="resource_purchase_verifying_payment">Verifica informazioni di pagamento…</string>
+    <string name="resource_download_trial">Prova gratis</string>
+    <string name="resource_apply_trial">Prova adesso</string>
+    <string name="resource_on_trial">Prova: %1$s</string>
+    <string name="resource_trial_time">（Sessione di prova: %1$d minuti）</string>
+    <string name="resource_trial_fail_title">Impossibile impostare la sessione di prova</string>
+    <string name="resource_trial_fail_message">"Assicurati che l'orologio il sistema sia impostato sull'ora corretta."</string>
+    <string name="resource_trial_fail_cancel">OK</string>
+    <string name="resource_trial_fail_go_settings">Inpostazioni</string>
+    <string name="resource_trial_end_title">Prova scaduta</string>
+    <string name="resource_trial_end_message">La prova di %1$s è terminata. Se ti piace, ti preghiamo di acquistarlo.</string>
+    <string name="resource_trial_end_restore">Prova terminata</string>
+    <string name="resource_trial_end_purchase">Acquista</string>
     <string name="deleting">Eliminazione...</string>
     <string name="resource_title_select_ringtone">Seleziona suoneria</string>
     <string name="resource_tip_select_ringtone">Nessuna suoneria selezionata</string>
@@ -181,7 +109,6 @@
     <string name="resource_expand_full_text">Espandi</string>
     <string name="resource_account_login">Accedi</string>
     <string name="resource_account_switch">Cambia account</string>
-    <string name="resource_account_current">Account: %1$s</string>
     <string name="resource_account_login_title">Accedi</string>
     <string name="resource_account_fail_to_add">Impossibile aggiungere account!</string>
     <string name="resource_account_abnormal_state">Errore account, riprovare più tardi.</string>
@@ -241,6 +168,9 @@
     <string name="resource_comment_loading_list">Caricamento commenti…</string>
     <string name="resource_comment_rate">Valutazione:</string>
     <string name="resource_comment_entry_tips">Mostra commenti</string>
+    <string name="resource_comment_rating_star_tips">Toccare le stelle per votare:</string>
+    <string name="resource_clear_search_history">Cancella la cronologia delle ricerche</string>
+    <string name="resource_clear_search_history_dialog">Vuoi cancellare tutta la cronologia delle ricerche?</string>
     <string name="fail_to_add_account">Impossibile aggiungere account!</string>
     <string name="account_unactivated">Account non attivato.</string>
     <string name="to_activate_the_account">Attiva il tuo account Xiaomi</string>
@@ -248,7 +178,97 @@
     <string name="resource_unknow_error">Errore sconosciuto.</string>
     <string name="resource_user_know">OK</string>
     <string name="resource_hint">Avviso</string>
-    <string name="resource_cancel">Annulla</string>
-    <string name="resource_ok">Ok</string>
-    <string name="resource_ringtone_volume_mute">Suoneria silenziata</string>
+    <string name="resource_ringtone_volume_mute">La tua suoneria è silenziata</string>
+    <string name="app_name">Temi</string>
+    <string name="theme_changing_dialog_title">Installazione nuovo tema, attendere prego..</string>
+    <string name="theme_changed_message">Applicato con successo!</string>
+    <string name="theme_changed_failed_message">Cambio tema non riuscito!</string>
+    <string name="backup_preference_title">Impostazioni Backup</string>
+    <string name="backup_theme_dialog_ok">Backup</string>
+    <string name="backup_theme_dialog_message">Backup tema corrente in %1$s</string>
+    <string name="backup_theme_progress_message">Backup in corso, attendere prego...</string>
+    <string name="backup_theme_success_message">Backup tema eseguito correttamente</string>
+    <string name="backup_theme_name">Mio backup</string>
+    <string name="theme_description_title_default">Predefinito</string>
+    <string name="theme_description_title_customized">Modificato</string>
+    <string name="component_category_finest_title">In evidenza</string>
+    <string name="component_category_more_title">Altro</string>
+    <string name="theme_component_title_framework">Temi</string>
+    <string name="theme_component_title_mms">SMS</string>
+    <string name="theme_component_title_wallpaper">Sfondi Desktop</string>
+    <string name="theme_component_title_lockwallpaper">Sfondi Lockscreen</string>
+    <string name="theme_component_title_miwallpaper">Sfondo MI</string>
+    <string name="theme_component_title_icon">Icone</string>
+    <string name="theme_component_title_boot_animation">Animazioni Boot</string>
+    <string name="theme_component_title_boot_audio">Audio Boot</string>
+    <string name="theme_component_title_font">Caratteri</string>
+    <string name="theme_component_title_ringtone">Suonerie</string>
+    <string name="theme_component_title_notification">Notifiche</string>
+    <string name="theme_component_title_alarm">Suonerie Sveglia</string>
+    <string name="theme_component_title_contact">Tastiere Telefono</string>
+    <string name="theme_component_title_lockstyle">Lockscreen</string>
+    <string name="theme_component_title_statusbar">Barre di stato</string>
+    <string name="theme_component_title_launcher">Pagine home</string>
+    <string name="theme_component_title_audio_effect">Effetti Audio</string>
+    <string name="theme_component_title_alarmstyle">Stili sveglia</string>
+    <string name="theme_component_title_clock">Orologi</string>
+    <string name="theme_component_title_photo_frame">Cornici</string>
+    <string name="theme_component_title_others">Altro</string>
+    <string name="theme_component_title_all">Temi</string>
+    <string name="theme_import_from_sdcard">Importa dalla scheda SD</string>
+    <string name="theme_select_others">Sfoglia</string>
+    <string name="third_party_pickers_activity_title">Imposta %1$s</string>
+    <string name="lockstyle_personal_settings">Personalizza</string>
+    <string name="wallpaper_settings">Impostazione sfondo</string>
+    <string name="desktop_wallpaper">Schermata home</string>
+    <string name="live_wallpaper">Sfondo animati</string>
+    <string name="mi_wallpaper">Sfondo MIUI</string>
+    <string name="lockscreen_wallpaper">Schermata di blocco</string>
+    <string name="change_wallpaper">Sfondo</string>
+    <string name="apply_font_tip">Il tema contiene font, quindi è necessario riavviare.</string>
+    <string name="apply_font_btn_reboot">Applica e riavvia</string>
+    <string name="apply_font_btn_exclude">Applica senza font</string>
+    <string name="apply_default_font_tip">Vuoi continuare a utilizzare il font attuale del sistema?</string>
+    <string name="theme_yes">Si</string>
+    <string name="theme_no">No</string>
+    <string name="title_component">Modifica temi</string>
+    <string name="title_system_resource">Risorse di sistema</string>
+    <string name="long_ringtone_resource">Durata (>5sec)</string>
+    <string name="short_ringtone_resource">Breve (&lt;5sec)</string>
+    <string name="all_ringtone_resource">Tutto</string>
+    <string name="wallpaper_set_as_both">Imposta per entrambi</string>
+    <string name="wallpaper_set_as_destop">Imposta come sfondo</string>
+    <string name="wallpaper_set_as_lockscreen">Imposta come lockscreen</string>
+    <string name="wallpaper_crop">Taglia</string>
+    <string name="wallpaper_loading_text">Caricamento...</string>
+    <string name="wallpaper_decoded_error">Decodifica fallita</string>
+    <string name="close">Chiudi</string>
+    <string name="download_success">Scaricato correttamente</string>
+    <string name="basic_info">Informazioni base</string>
+    <string name="account_info">Il mio account</string>
+    <string name="purchased_list">Temi acquistati</string>
+    <string name="payment_info">MiCredit</string>
+    <string name="theme_batch_has_update_text">%1$d temi hanno aggiornamenti disponibili</string>
+    <string name="theme_batch_updating_text">%1$d temi sono stati aggiornati</string>
+    <string name="theme_batch_update_all">Aggiorna tutto</string>
+    <string name="theme_batch_update_dlg_title">Aggiorna</string>
+    <string name="theme_batch_update_dlg_content">Vuoi aggiornare adesso?</string>
+    <string name="theme_batch_update_dlg_content_single">Aggiornare adesso?</string>
+    <string name="theme_current_using_has_update">Il tema attuale è stato aggiornato, premi qui per applicare</string>
+    <string name="theme_immediately_apply_tip">Il tema è stato aggiornato, applicare subito?</string>
+    <string name="theme_name">%1$s</string>
+    <string name="theme_fresh_man_notifaction">Nuovi temi disponibili</string>
+    <string name="selected_resource_file_invalid">Impossibile utilizzare il file di risorsa selezionato</string>
+    <string name="apply_theme_with_ringtones">Utilizza la suoneria del tema</string>
+    <string name="settings">Inpostazioni</string>
+    <string name="theme_user_agreement_content1">"Toccando D'accordo, accetti i termini indicati nella nostra "</string>
+    <string name="theme_user_agreement_content2">Accordo utente</string>
+    <string name="theme_user_agreement_content3">" e "</string>
+    <string name="theme_user_agreement_content4">Codizioni privacy</string>
+    <string name="theme_user_agreement_content5">.</string>
+    <string name="theme_user_agreement_title">Termini di utilizzo</string>
+    <string name="theme_user_agreement_allow">"D'accordo"</string>
+    <string name="theme_user_agreement_remind_never">Non mostrare più</string>
+    <string name="theme_user_agreement_remind_again">Show Terms of Use prompt</string>
+    <string name="theme_user_agreement_remind_summary">Show the Terms of Use prompt every time. This setting will take effect after you reboot your device.</string>
 </resources>
