--- a/Italian/main/Updater.apk/res/values-it/strings.xml
+++ b/Italian/main/Updater.apk/res/values-it/strings.xml
@@ -147,8 +147,8 @@ Contribuisci al sondaggio il prossimo Martedì"</string>
     <string name="update_sad">Deluso</string>
     <string name="update_feel">Cosa ne pensi?</string>
     <string name="best_update">Il miglior aggiornameto provato</string>
-    <string name="worst_update">Il peggior aggiornamento provato/string>
-    <string name="expect">Rispecchia le mie aspettative/string>
+    <string name="worst_update">Il peggior aggiornamento provato</string>
+    <string name="expect">Rispecchia le mie aspettative</string>
     <string name="my_update_feel">Le mie impressioni</string>
     <string name="my_best_update">Il miglior aggiornameto provato</string>
     <string name="my_worst_update">Il peggior aggiornamento provato</string>
