--- a/Italian/main/ThemeManager.apk/res/values-it/strings.xml
+++ b/Italian/main/ThemeManager.apk/res/values-it/strings.xml
@@ -49,13 +49,13 @@
     <string name="resource_update">Aggiorna</string>
     <string name="resource_buy">Acquista</string>
     <string name="resource_importing">Importazione</string>
-    <string name="resource_ringtone_playing_error">playing error</string>
+    <string name="resource_ringtone_playing_error">Errore di riproduzione</string>
     <string name="online_no_network">Impossibile connettere alla rete</string>
     <string name="online_search_hint">Cerca risorse online</string>
-    <string name="loading">Caricamento...</string>
+    <string name="loading">Caricamento…</string>
     <string name="download_failed">Download fallito</string>
     <string name="download_preview_failed">Impossibile caricare anteprime</string>
-    <string name="resource_delete_confirm">Sicuro di voler eliminare questi elementi ?</string>
+    <string name="resource_delete_confirm">Sicuro di voler eliminare questi elementi?</string>
     <string name="all_resources">Tutto</string>
     <string name="resource_default_name">Elemento</string>
     <string name="resource_detail">Dettagli</string>
@@ -79,11 +79,11 @@
     <string name="resource_failed_to_load_list">Impossibile caricare la lista</string>
     <string name="resource_search_list_empty">Non è stato trovato nulla</string>
     <string name="resource_list_title">Ultime</string>
-    <string name="resource_get_auth_checking">Ricerca autorizzazioni...</string>
-    <string name="resource_get_auth_retrieving">Recupero autorizzazioni...</string>
-    <string name="resource_get_auth_missing">Il tema non è stato scaricato dal market ufficiale, si prega di riscaricarlo uno simile dal market ufficiale.</string>
-    <string name="resource_get_auth_exceed_max_limit_title">Limite autorizzazione superato</string>
-    <string name="resource_get_auth_exceed_max_limit_tips">Il tema non può essere eseguito su questo dispositivo, hai raggiunto il limite massimo 10 installazioni, si prega di usare su un altro dispositivo</string>
+    <string name="resource_get_auth_checking">Ricerca autorizzazioni…</string>
+    <string name="resource_get_auth_retrieving">Recupero autorizzazioni…</string>
+    <string name="resource_get_auth_missing">Il tema non è stato scaricato dal market ufficiale, si prega di riscaricarne uno simile dal market ufficiale.</string>
+    <string name="resource_get_auth_exceed_max_limit_title">Limite autorizzazioni superato</string>
+    <string name="resource_get_auth_exceed_max_limit_tips">Il tema non può essere eseguito su questo dispositivo, hai raggiunto il limite massimo di 10 installazioni, si prega di usare il tema su un altro dispositivo</string>
     <string name="resource_server_out_of_service">Server attualmente non disponibile, si prega di riprovare più tardi.</string>
     <string name="resource_server_alert_dialog_title">Il servizio è momentaneamente non disponibile</string>
     <string name="resource_purchase_getting_order">Recupero informazioni ordine…</string>
@@ -101,10 +101,10 @@
     <string name="resource_trial_end_message">La prova di %1$s è terminata. Se ti piace, ti preghiamo di acquistarlo.</string>
     <string name="resource_trial_end_restore">Prova terminata</string>
     <string name="resource_trial_end_purchase">Acquista</string>
-    <string name="deleting">Eliminazione...</string>
+    <string name="deleting">Eliminazione…</string>
     <string name="resource_title_select_ringtone">Seleziona suoneria</string>
     <string name="resource_tip_select_ringtone">Nessuna suoneria selezionata</string>
-    <string name="loading_resource_detail_info">Caricamento delle informazioni...</string>
+    <string name="loading_resource_detail_info">Caricamento delle informazioni…</string>
     <string name="loading_resource_detail_fail">Impossibile caricare la risorsa!</string>
     <string name="resource_expand_full_text">Espandi</string>
     <string name="resource_account_login">Accedi</string>
@@ -139,7 +139,7 @@
     <string name="resource_comment_bad_comments">Negativi</string>
     <string name="resource_comment_average_score">Media</string>
     <string name="resource_comment_score_count">%1$s utenti</string>
-    <string name="resource_comment_no_average_score">Nessuna media</string>
+    <string name="resource_comment_no_average_score">Media non disponibile</string>
     <string name="resource_comment_5_star">5 Stelle</string>
     <string name="resource_comment_4_star">4 Stelle</string>
     <string name="resource_comment_3_star">3 Stelle</string>
@@ -186,7 +186,7 @@
     <string name="backup_preference_title">Impostazioni Backup</string>
     <string name="backup_theme_dialog_ok">Backup</string>
     <string name="backup_theme_dialog_message">Backup tema corrente in %1$s</string>
-    <string name="backup_theme_progress_message">Backup in corso, attendere prego...</string>
+    <string name="backup_theme_progress_message">Backup in corso, attendere prego…</string>
     <string name="backup_theme_success_message">Backup tema eseguito correttamente</string>
     <string name="backup_theme_name">Mio backup</string>
     <string name="theme_description_title_default">Predefinito</string>
@@ -195,21 +195,21 @@
     <string name="component_category_more_title">Altro</string>
     <string name="theme_component_title_framework">Temi</string>
     <string name="theme_component_title_mms">SMS</string>
-    <string name="theme_component_title_wallpaper">Sfondi Desktop</string>
-    <string name="theme_component_title_lockwallpaper">Sfondi Lockscreen</string>
-    <string name="theme_component_title_miwallpaper">Sfondo MI</string>
+    <string name="theme_component_title_wallpaper">Sfondi desktop</string>
+    <string name="theme_component_title_lockwallpaper">Sfondi schermata di blocco</string>
+    <string name="theme_component_title_miwallpaper">Sfondi MI</string>
     <string name="theme_component_title_icon">Icone</string>
     <string name="theme_component_title_boot_animation">Animazioni Boot</string>
     <string name="theme_component_title_boot_audio">Audio Boot</string>
     <string name="theme_component_title_font">Caratteri</string>
     <string name="theme_component_title_ringtone">Suonerie</string>
     <string name="theme_component_title_notification">Notifiche</string>
-    <string name="theme_component_title_alarm">Suonerie Sveglia</string>
-    <string name="theme_component_title_contact">Tastiere Telefono</string>
-    <string name="theme_component_title_lockstyle">Lockscreen</string>
+    <string name="theme_component_title_alarm">Suonerie sveglia</string>
+    <string name="theme_component_title_contact">Tastiere telefono</string>
+    <string name="theme_component_title_lockstyle">Schermate di blocco</string>
     <string name="theme_component_title_statusbar">Barre di stato</string>
     <string name="theme_component_title_launcher">Pagine home</string>
-    <string name="theme_component_title_audio_effect">Effetti Audio</string>
+    <string name="theme_component_title_audio_effect">Effetti audio</string>
     <string name="theme_component_title_alarmstyle">Stili sveglia</string>
     <string name="theme_component_title_clock">Orologi</string>
     <string name="theme_component_title_photo_frame">Cornici</string>
@@ -225,7 +225,7 @@
     <string name="mi_wallpaper">Sfondo MIUI</string>
     <string name="lockscreen_wallpaper">Schermata di blocco</string>
     <string name="change_wallpaper">Sfondo</string>
-    <string name="apply_font_tip">Il tema contiene font, quindi è necessario riavviare.</string>
+    <string name="apply_font_tip">Il tema contiene dei font, quindi è necessario riavviare.</string>
     <string name="apply_font_btn_reboot">Applica e riavvia</string>
     <string name="apply_font_btn_exclude">Applica senza font</string>
     <string name="apply_default_font_tip">Vuoi continuare a utilizzare il font attuale del sistema?</string>
@@ -240,7 +240,7 @@
     <string name="wallpaper_set_as_destop">Imposta come sfondo</string>
     <string name="wallpaper_set_as_lockscreen">Imposta come lockscreen</string>
     <string name="wallpaper_crop">Taglia</string>
-    <string name="wallpaper_loading_text">Caricamento...</string>
+    <string name="wallpaper_loading_text">Caricamento…</string>
     <string name="wallpaper_decoded_error">Decodifica fallita</string>
     <string name="close">Chiudi</string>
     <string name="download_success">Scaricato correttamente</string>
@@ -269,6 +269,6 @@
     <string name="theme_user_agreement_title">Termini di utilizzo</string>
     <string name="theme_user_agreement_allow">"D'accordo"</string>
     <string name="theme_user_agreement_remind_never">Non mostrare più</string>
-    <string name="theme_user_agreement_remind_again">Show Terms of Use prompt</string>
-    <string name="theme_user_agreement_remind_summary">Show the Terms of Use prompt every time. This setting will take effect after you reboot your device.</string>
+    <string name="theme_user_agreement_remind_again">Mostra Condizioni di utilizzo</string>
+    <string name="theme_user_agreement_remind_summary">Mostra l'avviso sulle Condizioni di utilizzo ogni volta. Questa impostazione avrà effetto dopo il riavvio del dispositivo.</string>
 </resources>
